<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.awl.lab1.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"

        android:id="@+id/textView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/s"
        android:contentDescription="@string/title_name"


        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"

        android:layout_marginTop="18dp"
        android:id="@+id/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Student_id"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/text2"

        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintLeft_toLeftOf="parent"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Id_hint"

        android:textSize="18sp"
        android:inputType="number"
        android:layout_marginTop="18dp"
        android:ems="13"
        android:id="@+id/ed1"

        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintLeft_toRightOf="@+id/text2"
        android:layout_marginLeft="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textSize="18sp"

        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:id="@+id/text3"

        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintLeft_toLeftOf="parent"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Password_hint"

        android:textSize="18sp"
        android:ems="13"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/ed1"
        app:layout_constraintLeft_toRightOf="@+id/text2"
        />

    <RadioGroup
        android:id="@+id/id0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:checkedButton="@+id/id1"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text3">

        <RadioButton
            android:id="@+id/id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Student"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            />

        <RadioButton
            android:id="@+id/id2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Staff"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />
    </RadioGroup>

    <Button
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Sign_in"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:background="@drawable/my_button"
        android:id="@+id/sign_in"

        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id0"
        app:layout_constraintRight_toLeftOf="@+id/sign_up"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/Sign_up"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:background="@drawable/my_button"
        android:id="@+id/sign_up"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id0"
        app:layout_constraintLeft_toRightOf="@+id/sign_in"/>


</android.support.constraint.ConstraintLayout>
